<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/notifications">
    <CheckBoxPreference android:title="@string/notifications"
                        android:defaultValue="true"
                        android:summary="@string/should_droidippy_notify_you"
                        android:key="notifications" />
    <CheckBoxPreference android:title="@string/audio_notification"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_notify_you_audibly"
			android:key="audio_notification" />
    <RingtonePreference android:title="@string/notification_sound"
			android:ringtoneType="notification"
			android:showDefault="true"
			android:showSilent="true"
			android:summary="@string/what_ringtone_should_droidippy_use"
			android:key="notification_sound" />
    <CheckBoxPreference android:title="@string/vibrate"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_vibrate"
			android:key="vibrate" />
    <CheckBoxPreference android:title="@string/custom_vibration"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_vibrate_with_custom_patterns"
			android:key="custom_vibration" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/controls">
    <ListPreference android:title="@string/long_click_sensitivity"
		    android:defaultValue="2"
		    android:summary="@string/how_sensitive_should_the_long_click_be"
		    android:key="long_click_sensitivity"
		    android:entries="@array/long_click_sensitivity_labels"
		    android:entryValues="@array/long_click_sensitivity_values" />
    <CheckBoxPreference android:title="@string/show_zoom_buttons"
			android:defaultValue="false"
			android:summary="@string/should_droidippy_show_zoom_buttons"
			android:key="zoom_buttons" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/display">
    <Preference android:title="@string/clear_widget_notifications" 
		android:summary="@string/remove_all_current_widget_notifications"
		android:key="clear_widget_notifications" />
    <CheckBoxPreference android:title="@string/show_finished_games"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_show_finished_games"
			android:key="show_finished_games" />
    <CheckBoxPreference android:title="@string/show_invitational_games"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_show_invitational_games"
			android:key="show_invitational_games" />
    <CheckBoxPreference android:title="@string/show_created_games"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_show_created_games"
			android:key="show_created_games" />
    <CheckBoxPreference android:title="@string/show_absolute_times"
			android:defaultValue="false"
			android:summary="@string/should_droidippy_show_absolute_times"
			android:key="absolute_times" />
    <CheckBoxPreference android:title="@string/show_order_prompts"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_show_order_prompts"
			android:key="order_prompts" />
    <CheckBoxPreference android:title="@string/show_long_game_data"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_show_long_game_data"
			android:key="long_game_data" />
    <CheckBoxPreference android:title="@string/show_order_help"
			android:defaultValue="true"
			android:summary="@string/should_droidippy_show_order_help"
			android:key="cx.ath.troja.droidippy.Order.order_help" />
    <CheckBoxPreference android:title="@string/classical_order_format"
			android:defaultValue="false"
			android:summary="@string/should_droidippy_show_orders_in_classical_format"
			android:key="classical_order_format" />
    <ListPreference android:title="@string/font_sizes"
		    android:defaultValue="1.0"
		    android:summary="@string/how_large_should_the_fonts_be"
		    android:key="font_sizes"
		    android:entries="@array/font_sizes"
		    android:entryValues="@array/font_size_values" />
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/colors">
    <cx.ath.troja.droidippy.ColorPreference android:title="@string/austria"
					    android:key="Austria_color" />
    <cx.ath.troja.droidippy.ColorPreference android:title="@string/england"
					    android:key="England_color" />
    <cx.ath.troja.droidippy.ColorPreference android:title="@string/france"
					    android:key="France_color" />
    <cx.ath.troja.droidippy.ColorPreference android:title="@string/germany"
					    android:key="Germany_color" />
    <cx.ath.troja.droidippy.ColorPreference android:title="@string/italy"
					    android:key="Italy_color" />
    <cx.ath.troja.droidippy.ColorPreference android:title="@string/russia"
					    android:key="Russia_color" />
    <cx.ath.troja.droidippy.ColorPreference android:title="@string/turkey"
					    android:key="Turkey_color" />
  </PreferenceCategory>
  <Preference android:title="@string/version" 
	      android:key="revision" />
</PreferenceScreen>
