<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/game_settings_dialog_layout"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">
  <TextView android:layout_width="match_parent"
	    android:textSize="20sp"
	    android:padding="10dp"
	    android:layout_height="wrap_content"
	    android:id="@+id/game_settings_dialog_gameid"
	    android:layout_alignParentTop="true" />
  <TextView android:layout_width="wrap_content"
	    android:textSize="20sp"
	    android:padding="10dp"
	    android:layout_alignBaseline="@+id/game_settings_dialog_alias"
	    android:layout_toLeftOf="@+id/game_settings_dialog_alias"
	    android:layout_alignParentLeft="true"
	    android:layout_height="wrap_content" 
	    android:text="@string/alias" />
  <EditText android:id="@+id/game_settings_dialog_alias"
	    android:layout_below="@+id/game_settings_dialog_gameid"
	    android:layout_alignParentRight="true"
	    android:layout_width="300dp"
	    android:layout_height="wrap_content" />
  <TextView android:id="@+id/game_settings_dialog_silenced_text"
	    android:layout_width="wrap_content"
	    android:textSize="20sp"
	    android:padding="10dp"
	    android:layout_alignParentLeft="true"
	    android:layout_alignBaseline="@+id/game_settings_dialog_silenced"
	    android:layout_toLeftOf="@+id/game_settings_dialog_silenced"
	    android:layout_height="wrap_content"
	    android:text="@string/silenced" />
  <CheckBox android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:id="@+id/game_settings_dialog_silenced"
	    android:layout_alignParentRight="true"
	    android:layout_below="@+id/game_settings_dialog_alias" />
  <Button android:id="@+id/game_settings_dialog_update"
	  android:layout_below="@+id/game_settings_dialog_silenced"
	  android:layout_width="match_parent"
	  android:layout_height="wrap_content"
	  android:text="@string/update" />
</RelativeLayout>
