<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/view_orders_layout"
		android:layout_width="match_parent"
		android:layout_weight="1"
		android:layout_height="match_parent">
  <LinearLayout android:layout_alignParentTop="true"
		android:orientation="vertical"
		android:layout_alignParentLeft="true"
		android:layout_alignParentRight="true"
		android:layout_above="@+id/view_game_left_arrow"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="#ffffff">
    <TextView android:id="@+id/view_orders_title"
	      android:layout_width="match_parent"
	      android:textSize="24sp"
	      android:text="@string/view_orders"
	      android:layout_height="wrap_content" />
    <TextView android:id="@+id/view_orders_phase_message"
	      android:textColor="#000000"
	      android:background="#ffffff"
	      android:textSize="14sp"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:visibility="gone" />
    <ScrollView android:layout_width="match_parent"
		android:layout_height="match_parent">
      <FrameLayout android:layout_width="match_parent"
                   android:layout_height="match_parent">
        <TextView android:id="@+id/view_orders_text"
                  android:textSize="14sp"
                  android:textIsSelectable="true"                
                  android:background="#ffffff"
                  android:hint="@string/enter_orders_on_the_map"
                  android:textColor="#000000"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"/>
        <EditText android:id="@+id/view_orders_text_old"
                  android:textSize="14sp"
                  android:visibility="gone"
                  android:editable="false"
                  android:textAppearance="@android:style/Widget.TextView"                
                  android:background="#ffffff"
                  android:hint="@string/enter_orders_on_the_map"
                  android:textColor="#000000"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"/>
      </FrameLayout>
    </ScrollView>
  </LinearLayout>
  <ImageButton android:id="@+id/view_game_left_arrow"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentBottom="true"
	       android:layout_alignParentLeft="true"
	       android:background="@null"
	       android:src="@drawable/left" />
  <Button android:id="@+id/view_orders_commit"
	  android:text="@string/commit"
	  android:layout_width="wrap_content"
	  android:layout_height="wrap_content"
	  android:layout_alignParentBottom="true"
	  android:layout_centerHorizontal="true"/>
  <ImageButton android:id="@+id/view_game_right_arrow"
	       android:layout_width="wrap_content"
	       android:layout_height="wrap_content"
	       android:layout_alignParentBottom="true"
	       android:layout_alignParentRight="true"
	       android:background="@null"
	       android:src="@drawable/right" />
</RelativeLayout>
